error fix: about spacing
Fixed an error where in the "About" section, the paragraph content was not vertically centered and wasn't always about twice as wide as each image item. accounting for margins.

--- a/style.css
+++ b/style.css
@@ -301,18 +301,26 @@ footer p {
     justify-content: space-around;
     align-items: center;
     flex: 1;
-    display: flex;
-    flex: 1;
   }
 
   #about img {
-    width: 25%;
-    padding: 1%
+    width: 23%;
+    padding: 1%;
+    display: flex;
+    flex-direction: row;
+    flex: 2;
+  }
+
+  fixIt {
+
   }
 
   #about p {
-    padding: 1%
-  }
+    flex-direction: row;
+    padding: 1%;
+    display: flex;
+    flex: 10;
+}
 
   #ideas {
     display:flex;
